# kde-runtime

./: .krazy  .reviewboardrc  BusyWidget.qml  CMakeLists.txt  CTestConfig.cmake  FlashingLabel.qml  KDE4RuntimeConfig.cmake.in  Mainpage.dox  PushButton.qml  README.packagers  ScrollBar.qml  classandpropertytree.cpp  classandpropertytree.h  config-runtime.h.cmake  datamanagementadaptor.cpp  datamanagementadaptor.h  datamanagementcommand.cpp  datamanagementcommand.h  datamanagementmodel.cpp  datamanagementmodel.h  datamanagementservice.cpp  datamanagementservice.h  dbusoperators.h  gallery.qml  kde-runtime.kdev4  nepomukdatamanagementservice.desktop  org.kde.nepomuk.DataManagement.xml  removablemediamodel.cpp  removablemediamodel.h  resourceidentifier.cpp  resourceidentifier.h  resourcemerger.cpp  resourcemerger.h  simpleresource.cpp  simpleresource.h  transactionmodel.cpp  transactionmodel.h
activitymanager/: ActivityManager.cpp  ActivityManager.h  ActivityManager_p.h  CMakeLists.txt  Event.cpp  Event.h  EventBackend.cpp  EventBackend.h  EventBackendLoader.cpp  EventBackendLoader.h  EventProcessor.cpp  EventProcessor.h  Messages.sh  NepomukCommon.h  NepomukEventBackend.cpp  NepomukEventBackend.h  NepomukResourceScoreCache.cpp  NepomukResourceScoreMaintainer.cpp  NepomukResourceScoreMaintainer.h  Plugin.h  README  SharedInfo.cpp  SharedInfo.h  SlcEventBackend.cpp  SlcEventBackend.h  ZeitgeistEventBackend.cpp  ZeitgeistEventBackend.h  activitymanager-plugin.desktop  activitymanager.cpp  activitymanager.desktop  activitymanager.h  config-features.h.cmake  kactivitymanagerd.desktop  krso.trig  main.cpp  org.kde.ActivityManager.SLC.xml  queries.sparql
dbusquit/: CMakeLists.txt
doc/: CMakeLists.txt
drkonqi/: AUTHORS  CMakeLists.txt  Makefile.am  Messages.sh  README  README.packagers  ToDo  ToDo-NewClasses  about-guide.txt  aboutbugreportingdialog.cpp  aboutbugreportingdialog.h  applicationdetailsexamples.cpp  applicationdetailsexamples.h  backtrace.cpp  backtrace.h  backtracegdb.cpp  backtracegdb.h  backtracegenerator.cpp  backtracegenerator.h  backtraceinfo.cpp  backtraceinfo.h  backtraceparser.cpp  backtraceparser.h  backtraceratingwidget.cpp  backtraceratingwidget.h  backtracewidget.cpp  backtracewidget.h  bugreportaddress.h  bugzillalib.cpp  bugzillalib.h  bzlibtest.cpp  config-drkonqi.h.cmake  crashedapplication.cpp  crashedapplication.h  crashinfo.cpp  crashinfo.h  crashtest.cpp  debuger.cpp  debuger.h  debugger.cpp  (+74 more)
kcontrol/: CMakeLists.txt
kdebugdialog/: CMakeLists.txt  Makefile.am  Messages.sh  kabstractdebugdialog.cpp  kabstractdebugdialog.h  kdebugdialog.cpp  kdebugdialog.h  kdebugdialog.ui  klistdebugdialog.cpp  klistdebugdialog.h  main.cpp
kfile/: CMakeLists.txt  Messages.sh  fileprops.cpp  fileprops.h
kglobalaccel/: CMakeLists.txt  component.cpp  component.h  globalshortcut.cpp  globalshortcut.h  globalshortcutcontext.cpp  globalshortcutsregistry.cpp  globalshortcutsregistry.h  kglobalaccel.desktop  kglobalaccel.notifyrc  kglobalaccel_mac.h  kglobalaccel_qws.cpp  kglobalaccel_win.cpp  kglobalaccel_x11.cpp  kglobalacceld.cpp  kglobalacceld.h  main.cpp
kimgio/: CMakeLists.txt  webp.cpp
kinstalltheme/: CMakeLists.txt  main.cpp
klockingserver/: CMakeLists.txt  Messages.sh  klockingserver.cpp  klockingserver.desktop  klockingserver.h  org.kde.KLockingServer.xml
knetattach/: CMakeLists.txt  Makefile.am  Messages.sh  TODO  knetattach.cpp  knetattach.desktop  knetattach.h  knetattach.ui  knetattach.ui.h  main.cpp
knewstuff/: CMakeLists.txt  Messages.sh  khotnewstuff.cpp  khotnewstuff.knsrc  khotnewstuff_upload.cpp  khotnewstuff_upload.knsrc
knotify/: CMakeLists.txt  Mainpage.dox  Messages.sh  hardwarenotifications.notifyrc  imageconverter.cpp  imageconverter.h  kde.notifyrc  knotify.cpp  knotify.desktop  knotify.h  knotify4.desktop  knotify_export.h  knotifyconfig.cpp  knotifyconfig.h  knotifyplugin.cpp  knotifyplugin.h  ksolidnotify.cpp  ksolidnotify.h  main.cpp  notifybyexecute.cpp  notifybyktts.cpp  notifybyktts.h  notifybylogfile.cpp  notifybypopup.cpp  notifybypopup.h  notifybysound.cpp  notifybysound.h  notifybytaskbar.cpp  org.kde.knotify.service.cmake
kquitapp/: CMakeLists.txt  Messages.sh  dbusquit.cpp  kquitapp.cpp
ktimezoned/: CMakeLists.txt  ktimezoned.cpp  ktimezoned.desktop  ktimezoned.h  ktimezoned_win.cpp  ktimezoned_win.h  ktimezonedbase.h  org.kde.KTimeZoned.xml
kuiserver/: CMakeLists.txt  Messages.sh  jobview.cpp  jobview.h  kuiserver.desktop  main.cpp  org.kde.kuiserver.service.in  progresslistdelegate.cpp  progresslistdelegate.h  progresslistdelegate_p.h  progresslistmodel.cpp  progresslistmodel.h  requestviewcallwatcher.h  uiserver.cpp  uiserver.h  uiserverConfigDialog.ui  uiserver_p.h  uiserveradaptor.cpp  uiserveradaptor_p.h
kwalletd/: CMakeLists.txt  knewwalletdialog.cpp  kwalletd.cpp  kwalletd.desktop  kwalletd.h  kwalletd.notifyrc  kwalletwizard.cpp  kwalletwizardpagegpgkey.ui  main.cpp
l10n/: AUTHORS  CMakeLists.txt  Makefile.am  README  caribbean.desktop  centralafrica.desktop  centralamerica.desktop  centralasia.desktop  centraleurope.desktop  country.template  eastafrica.desktop  eastasia.desktop  easteurope.desktop  entities.csv  entities.ods  middleeast.desktop  northafrica.desktop  northamerica.desktop  northeurope.desktop  oceania.desktop  southafrica.desktop  southamerica.desktop  southasia.desktop  southeastasia.desktop  southeurope.desktop  westafrica.desktop  westeurope.desktop
lib/: CMakeLists.txt  createresourcejob.cpp  createresourcejob.h  datamanagement.cpp  datamanagement.h  dbustypes.cpp  dbustypes.h  describeresourcesjob.cpp  describeresourcesjob.h  genericdatamanagementjob.cpp  genericdatamanagementjob_p.h  resourcegraphstoringjob.cpp  resourcegraphstoringjob_p.h  simpleresource.cpp  simpleresource.h  simpleresourcegraph.cpp  simpleresourcegraph.h
nepomuk/: CMakeLists.txt  Mainpage.dox  Messages.sh  kcm_nepomuk.desktop  modelcopyjob.cpp  modelcopyjob.h  nepomukconfigwidget.ui  nepomukcore.cpp  nepomukcore.h  nepomukserver-config.h.cmake  nepomukserver.cpp  nepomukserver.desktop  nepomukserver.h  (+14 more)
(+2810 files in other folders)
