if ( UNIX )
   add_subdirectory(kdesu)
endif ( UNIX )

add_subdirectory(kcontrol)
add_subdirectory(glossary)
add_subdirectory(kdebugdialog)
add_subdirectory(khelpcenter)
add_subdirectory(kioslave)
add_subdirectory(knetattach)
if (NOT WIN32)
   add_subdirectory(nepomuk)
endif (NOT WIN32)
add_subdirectory(onlinehelp)
