macro_optional_find_package(OpenSSL)
if ( Q_WS_X11 )
add_subdirectory(kcontrol)
endif( Q_WS_X11 )
add_subdirectory(icons)
add_subdirectory(locale)
add_subdirectory(style)
add_subdirectory(krdb)
add_subdirectory( kded )
add_subdirectory( pics )
add_subdirectory( knotify )
add_subdirectory( componentchooser )
add_subdirectory( menus) 
add_subdirectory( dnssd )
if(OPENSSL_FOUND)
  add_subdirectory( crypto )
endif(OPENSSL_FOUND)

