if ( Q_WS_X11 )
  add_subdirectory(kcontrol)
endif( Q_WS_X11 )
add_subdirectory(icons)
add_subdirectory(locale)
add_subdirectory( kded )
add_subdirectory( pics )
add_subdirectory( knotify )
add_subdirectory( componentchooser )
add_subdirectory( menus )
add_subdirectory( dnssd )
if(NOT WIN32)
  add_subdirectory( samba )
endif(NOT WIN32)
