add_subdirectory(icons)
add_subdirectory(locale)
add_subdirectory( kded )
add_subdirectory( pics )
add_subdirectory( knotify )
add_subdirectory( componentchooser )
add_subdirectory( menus )
add_subdirectory( dnssd )
add_subdirectory(infocenter)
if(NOT WIN32)
  add_subdirectory( samba )
endif(NOT WIN32)
